--- a/project01/visualization_3/index.html
+++ b/project01/visualization_3/index.html
@@ -38,7 +38,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>Baby Names - Visualization 3</title>
     <script src="js/d3/d3.js"></script>
 </head>
 <body>
