change script name

--- a/project01/visualization_3/index.html
+++ b/project01/visualization_3/index.html
@@ -44,6 +44,6 @@
 <body>
     <label for="startDate">Start Date</label>
     <input type="number" id="startDate" value=1910>
-    <script src="js/project.js?newv"></script>
+    <script src="js/project.js?new"></script>
 </body>
 </html>
